// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PricingSection > 应该匹配桌面端快照 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-1oqqzyl-MuiContainer-root"
  >
    <div
      class="MuiBox-root css-lnamjh"
    >
      <h2
        class="MuiTypography-root MuiTypography-h3 MuiTypography-alignCenter MuiTypography-gutterBottom css-ldayfj-MuiTypography-root"
      >
        价格方案
      </h2>
      <p
        class="MuiTypography-root MuiTypography-h6 MuiTypography-alignCenter css-ou3tbp-MuiTypography-root"
      >
        选择最适合您的方案，开启 AI 之旅
      </p>
      <div
        class="MuiBox-root css-a78yor"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-9z8qy4-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-11 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 css-1c4eo4l-MuiGrid-root"
          >
            <div
              style="height: 100%; opacity: 0; transform: translateY(20px);"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1a5s6un-MuiPaper-root-MuiCard-root"
              >
                <div
                  class="MuiCardHeader-root css-r4xzz0-MuiCardHeader-root"
                >
                  <div
                    class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                  >
                    <h3
                      class="MuiTypography-root MuiTypography-h5 css-13mzj6c-MuiTypography-root"
                    >
                      免费版
                    </h3>
                  </div>
                </div>
                <div
                  class="MuiCardContent-root css-19joarl-MuiCardContent-root"
                >
                  <div
                    class="MuiBox-root css-1aog6k3"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h3 css-18kosl7-MuiTypography-root"
                    >
                      0
                    </h2>
                  </div>
                  <div
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="MuiBox-root css-1gh5laf"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                        data-testid="CheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-alignLeft css-8kcrug-MuiTypography-root"
                      >
                        每日固定调用次数
                      </h6>
                    </div>
                    <div
                      class="MuiBox-root css-1gh5laf"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                        data-testid="CheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-alignLeft css-8kcrug-MuiTypography-root"
                      >
                        基础模型支持
                      </h6>
                    </div>
                    <div
                      class="MuiBox-root css-1gh5laf"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                        data-testid="CheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-alignLeft css-8kcrug-MuiTypography-root"
                      >
                        标准响应速度
                      </h6>
                    </div>
                    <div
                      class="MuiBox-root css-1gh5laf"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                        data-testid="CheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-alignLeft css-8kcrug-MuiTypography-root"
                      >
                        社区支持
                      </h6>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiCardActions-root MuiCardActions-spacing css-1m8re92-MuiCardActions-root"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-fullWidth css-bpif74-MuiButtonBase-root-MuiButton-root"
                    tabindex="0"
                    type="button"
                  >
                    立即使用
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-11 MuiGrid-grid-sm-11 MuiGrid-grid-md-4 css-1irnbl5-MuiGrid-root"
          >
            <div
              style="height: 100%; opacity: 0; transform: translateY(20px);"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1bofaqb-MuiPaper-root-MuiCard-root"
              >
                <div
                  class="MuiCardHeader-root css-r4xzz0-MuiCardHeader-root"
                >
                  <div
                    class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                  >
                    <h3
                      class="MuiTypography-root MuiTypography-h5 css-13mzj6c-MuiTypography-root"
                    >
                      专业版
                    </h3>
                    <span
                      class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter MuiCardHeader-subheader css-i41i7a-MuiTypography-root"
                    >
                      最受欢迎
                    </span>
                  </div>
                </div>
                <div
                  class="MuiCardContent-root css-19joarl-MuiCardContent-root"
                >
                  <div
                    class="MuiBox-root css-1aog6k3"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h3 css-18kosl7-MuiTypography-root"
                    >
                      99
                    </h2>
                  </div>
                  <div
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="MuiBox-root css-1gh5laf"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                        data-testid="CheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-alignLeft css-8kcrug-MuiTypography-root"
                      >
                        无限制调用次数
                      </h6>
                    </div>
                    <div
                      class="MuiBox-root css-1gh5laf"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                        data-testid="CheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-alignLeft css-8kcrug-MuiTypography-root"
                      >
                        所有模型支持
                      </h6>
                    </div>
                    <div
                      class="MuiBox-root css-1gh5laf"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                        data-testid="CheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-alignLeft css-8kcrug-MuiTypography-root"
                      >
                        优先响应速度
                      </h6>
                    </div>
                    <div
                      class="MuiBox-root css-1gh5laf"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                        data-testid="CheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-alignLeft css-8kcrug-MuiTypography-root"
                      >
                        专属客服支持
                      </h6>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiCardActions-root MuiCardActions-spacing css-1m8re92-MuiCardActions-root"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorSecondary MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorSecondary MuiButton-fullWidth css-1djl77w-MuiButtonBase-root-MuiButton-root"
                    tabindex="0"
                    type="button"
                  >
                    立即订阅
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-11 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 css-1c4eo4l-MuiGrid-root"
          >
            <div
              style="height: 100%; opacity: 0; transform: translateY(20px);"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1a5s6un-MuiPaper-root-MuiCard-root"
              >
                <div
                  class="MuiCardHeader-root css-r4xzz0-MuiCardHeader-root"
                >
                  <div
                    class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                  >
                    <h3
                      class="MuiTypography-root MuiTypography-h5 css-13mzj6c-MuiTypography-root"
                    >
                      企业版
                    </h3>
                  </div>
                </div>
                <div
                  class="MuiCardContent-root css-19joarl-MuiCardContent-root"
                >
                  <div
                    class="MuiBox-root css-1aog6k3"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h3 css-18kosl7-MuiTypography-root"
                    >
                      联系我们
                    </h2>
                  </div>
                  <div
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="MuiBox-root css-1gh5laf"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                        data-testid="CheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-alignLeft css-8kcrug-MuiTypography-root"
                      >
                        定制化解决方案
                      </h6>
                    </div>
                    <div
                      class="MuiBox-root css-1gh5laf"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                        data-testid="CheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-alignLeft css-8kcrug-MuiTypography-root"
                      >
                        API 独享配置
                      </h6>
                    </div>
                    <div
                      class="MuiBox-root css-1gh5laf"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                        data-testid="CheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-alignLeft css-8kcrug-MuiTypography-root"
                      >
                        企业级 SLA 保障
                      </h6>
                    </div>
                    <div
                      class="MuiBox-root css-1gh5laf"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                        data-testid="CheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-alignLeft css-8kcrug-MuiTypography-root"
                      >
                        7×24小时技术支持
                      </h6>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiCardActions-root MuiCardActions-spacing css-1m8re92-MuiCardActions-root"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-fullWidth css-bpif74-MuiButtonBase-root-MuiButton-root"
                    tabindex="0"
                    type="button"
                  >
                    联系销售
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PricingSection > 应该匹配移动端快照 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthLg css-1oqqzyl-MuiContainer-root"
  >
    <div
      class="MuiBox-root css-lnamjh"
    >
      <h2
        class="MuiTypography-root MuiTypography-h3 MuiTypography-alignCenter MuiTypography-gutterBottom css-ldayfj-MuiTypography-root"
      >
        价格方案
      </h2>
      <p
        class="MuiTypography-root MuiTypography-h6 MuiTypography-alignCenter css-ou3tbp-MuiTypography-root"
      >
        选择最适合您的方案，开启 AI 之旅
      </p>
      <div
        class="MuiBox-root css-a78yor"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-9z8qy4-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-11 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 css-1c4eo4l-MuiGrid-root"
          >
            <div
              style="height: 100%; opacity: 0; transform: translateY(20px);"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1a5s6un-MuiPaper-root-MuiCard-root"
              >
                <div
                  class="MuiCardHeader-root css-r4xzz0-MuiCardHeader-root"
                >
                  <div
                    class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                  >
                    <h3
                      class="MuiTypography-root MuiTypography-h5 css-13mzj6c-MuiTypography-root"
                    >
                      免费版
                    </h3>
                  </div>
                </div>
                <div
                  class="MuiCardContent-root css-19joarl-MuiCardContent-root"
                >
                  <div
                    class="MuiBox-root css-1aog6k3"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h4 css-6xk5a3-MuiTypography-root"
                    >
                      0
                    </h2>
                  </div>
                  <div
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="MuiBox-root css-1gh5laf"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                        data-testid="CheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-alignLeft css-8kcrug-MuiTypography-root"
                      >
                        每日固定调用次数
                      </h6>
                    </div>
                    <div
                      class="MuiBox-root css-1gh5laf"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                        data-testid="CheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-alignLeft css-8kcrug-MuiTypography-root"
                      >
                        基础模型支持
                      </h6>
                    </div>
                    <div
                      class="MuiBox-root css-1gh5laf"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                        data-testid="CheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-alignLeft css-8kcrug-MuiTypography-root"
                      >
                        标准响应速度
                      </h6>
                    </div>
                    <div
                      class="MuiBox-root css-1gh5laf"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                        data-testid="CheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-alignLeft css-8kcrug-MuiTypography-root"
                      >
                        社区支持
                      </h6>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiCardActions-root MuiCardActions-spacing css-1m8re92-MuiCardActions-root"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-fullWidth css-bpif74-MuiButtonBase-root-MuiButton-root"
                    tabindex="0"
                    type="button"
                  >
                    立即使用
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-11 MuiGrid-grid-sm-11 MuiGrid-grid-md-4 css-1irnbl5-MuiGrid-root"
          >
            <div
              style="height: 100%; opacity: 0; transform: translateY(20px);"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation8 MuiCard-root css-1bofaqb-MuiPaper-root-MuiCard-root"
              >
                <div
                  class="MuiCardHeader-root css-r4xzz0-MuiCardHeader-root"
                >
                  <div
                    class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                  >
                    <h3
                      class="MuiTypography-root MuiTypography-h5 css-13mzj6c-MuiTypography-root"
                    >
                      专业版
                    </h3>
                    <span
                      class="MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter MuiCardHeader-subheader css-i41i7a-MuiTypography-root"
                    >
                      最受欢迎
                    </span>
                  </div>
                </div>
                <div
                  class="MuiCardContent-root css-19joarl-MuiCardContent-root"
                >
                  <div
                    class="MuiBox-root css-1aog6k3"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h4 css-6xk5a3-MuiTypography-root"
                    >
                      99
                    </h2>
                  </div>
                  <div
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="MuiBox-root css-1gh5laf"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                        data-testid="CheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-alignLeft css-8kcrug-MuiTypography-root"
                      >
                        无限制调用次数
                      </h6>
                    </div>
                    <div
                      class="MuiBox-root css-1gh5laf"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                        data-testid="CheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-alignLeft css-8kcrug-MuiTypography-root"
                      >
                        所有模型支持
                      </h6>
                    </div>
                    <div
                      class="MuiBox-root css-1gh5laf"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                        data-testid="CheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-alignLeft css-8kcrug-MuiTypography-root"
                      >
                        优先响应速度
                      </h6>
                    </div>
                    <div
                      class="MuiBox-root css-1gh5laf"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                        data-testid="CheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-alignLeft css-8kcrug-MuiTypography-root"
                      >
                        专属客服支持
                      </h6>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiCardActions-root MuiCardActions-spacing css-1m8re92-MuiCardActions-root"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorSecondary MuiButton-fullWidth MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorSecondary MuiButton-fullWidth css-1djl77w-MuiButtonBase-root-MuiButton-root"
                    tabindex="0"
                    type="button"
                  >
                    立即订阅
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-11 MuiGrid-grid-sm-6 MuiGrid-grid-md-4 css-1c4eo4l-MuiGrid-root"
          >
            <div
              style="height: 100%; opacity: 0; transform: translateY(20px);"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiCard-root css-1a5s6un-MuiPaper-root-MuiCard-root"
              >
                <div
                  class="MuiCardHeader-root css-r4xzz0-MuiCardHeader-root"
                >
                  <div
                    class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
                  >
                    <h3
                      class="MuiTypography-root MuiTypography-h5 css-13mzj6c-MuiTypography-root"
                    >
                      企业版
                    </h3>
                  </div>
                </div>
                <div
                  class="MuiCardContent-root css-19joarl-MuiCardContent-root"
                >
                  <div
                    class="MuiBox-root css-1aog6k3"
                  >
                    <h2
                      class="MuiTypography-root MuiTypography-h4 css-6xk5a3-MuiTypography-root"
                    >
                      联系我们
                    </h2>
                  </div>
                  <div
                    class="MuiBox-root css-0"
                  >
                    <div
                      class="MuiBox-root css-1gh5laf"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                        data-testid="CheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-alignLeft css-8kcrug-MuiTypography-root"
                      >
                        定制化解决方案
                      </h6>
                    </div>
                    <div
                      class="MuiBox-root css-1gh5laf"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                        data-testid="CheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-alignLeft css-8kcrug-MuiTypography-root"
                      >
                        API 独享配置
                      </h6>
                    </div>
                    <div
                      class="MuiBox-root css-1gh5laf"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                        data-testid="CheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-alignLeft css-8kcrug-MuiTypography-root"
                      >
                        企业级 SLA 保障
                      </h6>
                    </div>
                    <div
                      class="MuiBox-root css-1gh5laf"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-ci5apu-MuiSvgIcon-root"
                        data-testid="CheckIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M9 16.17 4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
                        />
                      </svg>
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-alignLeft css-8kcrug-MuiTypography-root"
                      >
                        7×24小时技术支持
                      </h6>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiCardActions-root MuiCardActions-spacing css-1m8re92-MuiCardActions-root"
                >
                  <button
                    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-fullWidth MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeLarge MuiButton-outlinedSizeLarge MuiButton-colorPrimary MuiButton-fullWidth css-bpif74-MuiButtonBase-root-MuiButton-root"
                    tabindex="0"
                    type="button"
                  >
                    联系销售
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
